Fix placeholder alignment in inputs

--- a/components/forms/Input.module.scss
+++ b/components/forms/Input.module.scss
@@ -155,6 +155,8 @@
         left: 0;
         top: 0;
         width: 100%;
+        height: calc(100% + 2px);
+        margin: -1px;
         padding: inherit;
         text-align: left;
         color: inherit;
